Disabled session creation; add JAXB dependency.